--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.url=jdbc:postgresql://localhost:5432/facturacion-soe
 spring.datasource.username=postgres
 spring.datasource.password=123
