Se añadió el diagrama y el SQL de la base de datos Se modificaron las properties de conexion a la BD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/facturacion-soe
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.username=facturacion-soe
+spring.datasource.password=facturacion-soe
