--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/facturacion-soe
-spring.datasource.username=facturacion-soe
-spring.datasource.password=facturacion-soe
+#spring.datasource.username=facturacion-soe
+spring.datasource.username=postgres
+#spring.datasource.password=facturacion-soe
+spring.datasource.password=123
