--- a/usecases/pom.xml
+++ b/usecases/pom.xml
@@ -14,6 +14,11 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
             <groupId>bo.edu.uagrm.soe</groupId>
             <artifactId>domain</artifactId>
             <version>1.0.0</version>
